--- a/css/style.css
+++ b/css/style.css
@@ -5,37 +5,42 @@ body {
 
 #current-time-container {
     font-weight: bold;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     text-align: center;
+    font-size: 20px;
+
 }
 
 #hijri-date {
     font-weight: bold;
     margin-bottom: 10px;
     text-align: center;
+    color: #333;
+    font-size: 20px;
+
 }
 
 table {
     width: 80%;
     margin: 0 auto;
     border-collapse: collapse;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
-th,
-td {
+th, td {
     border: 1px solid #dddddd;
-    padding: 8px;
+    padding: 12px;
     text-align: left;
 }
 
 th {
     background-color: #dddddd;
+    color: #333;
 }
 
 tr:nth-child(even) {
     background-color: #f2f2f2;
 }
-
 
 .additional-column {
     display: table-cell;
@@ -62,4 +67,12 @@ tr:nth-child(even) {
     position: absolute;
     top: 0;
     left: 10px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 10px;
 }
+
+#temperature, #wind-speed {
+    font-weight: bold;
+}
+
