fixed the banner and made it not affect other

--- a/css/style.css
+++ b/css/style.css
@@ -73,3 +73,12 @@ tr:nth-child(even) {
 #temperature, #wind-speed {
     font-weight: bold;
 }
+
+#image-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+}
