--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,22 @@ tr:nth-child(even) {
     height: 200px;
     overflow: hidden;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+    html {
+        transform: rotate(-90deg);
+        transform-origin: left top;
+        width: 100vh;
+        overflow-x: hidden;
+        position: absolute;
+        top: 100%;
+        left: 0;
+    }
+}
+@media (orientation: portrait) {
+    table {
+        width: 100%;
+        height: 80%;
+        zoom: 200%;
+    }
+}
